syntax = "proto3";

option go_package = "protocol/pb";

message Send2ClientReq {
    string systemID = 1;
    string messageID = 2;
    string sendUserID = 3;
    string clientID = 4;
    int32 code = 5;
    string message = 6;
    string data = 7;
}

message CloseClientReq {
    string systemID = 1;
    string clientID = 2;
}

message BindGroupReq {
    string systemID = 1;
    string groupName = 2;
    string clientID = 3;
    string userID = 4;
    string extend = 5;
}

message Send2GroupReq {
    string systemID = 1;
    string messageID = 2;
    string sendUserID = 3;
    string groupName = 4;
    int32 code = 5;
    string message = 6;
    string data = 7;
}

message Send2SystemReq {
    string systemID = 1;
    string messageID = 2;
    string sendUserID = 3;
    int32 code = 4;
    string message = 5;
    string data = 6;
}

message GetGroupClientsReq {
    string systemID = 1;
    string groupName = 2;
}

message Send2ClientReply {
}

message CloseClientReply {
}

message BindGroupReply {
}

message Send2GroupReply {
}

message Send2SystemReply {
}

message GetGroupClientsReply {
    repeated string list = 1;
}

service CommonService {
    rpc Send2Client (Send2ClientReq) returns (Send2ClientReply) {
    }
    rpc CloseClient (CloseClientReq) returns (CloseClientReply) {
    }
    rpc BindGroup (BindGroupReq) returns (BindGroupReply) {
    }
    rpc Send2Group (Send2GroupReq) returns (Send2GroupReply) {
    }
    rpc Send2System (Send2SystemReq) returns (Send2SystemReply) {
    }
    rpc GetGroupClients (GetGroupClientsReq) returns (GetGroupClientsReply) {
    }
}